--- a/J3.html
+++ b/J3.html
@@ -24,11 +24,11 @@ if(sum1 == sum2){
 var degree = Number(prompt('Введите градусы в цельсиях:'));
 var fahrenheit = (degree*1.8)+32;
 
-if (typeof(degree) == "number") {
-    alert(fahrenheit + ' Фаренгейтa')
-} else {
-    alert('Неверный формат!');
-}
+ if (degree * 1 == degree) {
+     alert(fahrenheit + ' Фаренгейтa') 
+ } else {
+     alert('Неверный формат!')
+ }
     </script>
 </body>
 </html>
