--- a/h4/index.html
+++ b/h4/index.html
@@ -117,22 +117,24 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img src="originals/firefox_logo-only_RGB_400px.png" alt="Mozilla" srcset="sizes 400px">
+          <img srcset="originals/firefox_logo-only_RGB_120px.png 120w, originals/firefox_logo-only_RGB_400px.png 400w" sizes="(max-width: 480px) 120px, (min-width: 481px) 400px" src="originals/firefox_logo-only_RGB_400px.png" alt="logo">
         </a>
         <a href="https://www.mozilla.org/">
-          <img src="originals/mozilla-dinosaur-head_400px.png" alt="Dragon Head" srcset="sizes 400px">
+          <img srcset="originals/mozilla-dinosaur-head_120px.png 120w, originals/mozilla-dinosaur-head_400px.png 400w" sizes="(max-width: 480px) 120px, (min-width: 481px) 400px" src="ooriginals/mozilla-dinosaur-head_400px.png" alt="DragonHead">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img src="originals/firefox-addons_400px.jpg" alt="Addon" srcset="sizes 400px">
+          <img srcset="originals/firefox-addons_400px.jpg 120w, originals/firefox-addons_400px.jpg 400w" sizes="(max-width: 480px) 120px, (min-width: 481px) 400px" src="originals/firefox-addons_400px.jpg" alt="Addons">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="originals/mdn.svg" alt="svg">
+          <img srcset="originals/mdn.svg 120w, originals/mdn.svg 400w" sizes="(max-width: 480px) 120px, (min-width: 481px) 400px" src="originals/mdn.svg" alt="mdn">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
        <picture>
+         <source media="(max-width: 600px)" srcset="red-panda_600px.jpg">
+         <source media="(max-width: 601px)" srcset="red-panda_1200px.jpg">
          <img src="red-panda_1200px.jpg">
        </picture>
       </div>
