--- a/j6/index.html
+++ b/j6/index.html
@@ -25,7 +25,7 @@
         <option value="/">/</option>
     </select>   
     <button type="submit">Расчитать!</button>
-    <p class="output">Ответ: </p>
+    <p id="output">Ответ: </p>
 </div>
 </td>
 </tr>
