--- a/j7/index.html
+++ b/j7/index.html
@@ -5,12 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>j7</title>
-    <style>
-        table {
-            margin-top: 300px;
-        }
-    </style>
 </head>
 
 <body>
@@ -50,9 +46,14 @@
                 </td>
                 <td>Tретие время: <div id="3.2"></div>
                 </td>
-                <td>Tретие время: <div id="3.3"></div>
+                <td>Tретие время: <div id="3.3"></div></td>
+            </tr>
+            <tr>
+                <td>Результат: <div id="result1"></div>
                 </td>
-              
+                <td>Результат: <div id="result2"></div>
+                </td>
+                <td>Результат: <div id="result3"></div></td>
             </tr>
         </tbody>
     </table>
