--- a/j7/index.html
+++ b/j7/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>j7</title>
+<style>
+body{
+    font-size: 23px;    
+}    
+</style>
 </head>
 
 <body>
