--- a/j7/index.html
+++ b/j7/index.html
@@ -8,7 +8,8 @@
     <title>j7</title>
 <style>
 body{
-    font-size: 23px;    
+    font-size: 23px; 
+    justify-content:center;
 }    
 </style>
 </head>
