--- a/j7/index.html
+++ b/j7/index.html
@@ -9,7 +9,8 @@
 <style>
 body{
     font-size: 23px; 
-    justify-content:center;
+    display: flex;
+    justify-content: center;
 }    
 </style>
 </head>
