--- a/c6/task1/index.html
+++ b/c6/task1/index.html
@@ -5,26 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Music players</title>
+    <title>Music players #1</title>
 </head>
 
 <body>
-    <div class="leftpanel"><img src="share.png" id="share" height="30"
-            width="30">
-        <img src="random.png"
-            id="random" eight="30" width="30">
+    <div class="leftpanel"><img src="share.png" id="share" height="30" width="30">
+        <img src="random.png" id="random" eight="30" width="30">
         <img src="like.png" id="like" height="30" width="30">
-        <img src="retweet.png"
-            id="retweet" height="30" width="30">
+        <img src="retweet.png" id="retweet" height="30" width="30">
         <img src="plus.png" id="plus" height="30" width="30">
         <div class="volume">
-            <img src="volumeup.png"
-                id="volumeup" height="30" width="35">
+            <img src="volumeup.png" id="volumeup" height="30" width="35">
             <div class="volumebar">
                 <div class="volumebarf"></div>
             </div>
-            <img src="volumedown.png"
-                id="volumedown" height="30" width="30">
+            <img src="volumedown.png" id="volumedown" height="30" width="30">
         </div>
         <img src="settings.png" id="settings" height="30" width="30">
     </div>
@@ -44,14 +39,11 @@
             </div>
             <div class="remote">
                 <div class="circle"></div>
-                <img src="https://cdn-icons.flaticon.com/png/512/4210/premium/4210635.png?token=exp=1657796505~hmac=ea06b7923538ea780bbbefe498f554ee"
-                    class="pause">
+                <img src="pause.png" class="pause">
                 <div class="circle backward"></div>
-                <img src="https://cdn-icons.flaticon.com/png/512/4210/premium/4210642.png?token=exp=1657798112~hmac=20683a3e31e9ae4745e4220ce3b022d9"
-                    class="backwardic">
+                <img src="prev.png" class="backwardic">
                 <div class="circle next"></div>
-                <img src="https://cdn-icons.flaticon.com/png/512/4210/premium/4210637.png?token=exp=1657798113~hmac=2ccb16fa4b5625dc8e2770a8ee435371"
-                    class="nextic">
+                <img src="next.png" class="nextic">
             </div>
         </div>
     </div>
