--- a/c6/task2/index.html
+++ b/c6/task2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Music Player 2</title>
+    <title>Music Player #2</title>
 </head>
 <body>
     <div>
@@ -29,8 +29,8 @@
         <img src="pause.PNG" id="pause">
         <img src="previous.png" id="prev">
         <img src="next.png" id="next">
-        <img src="https://cdn-icons.flaticon.com/png/512/2734/premium/2734827.png?token=exp=1657801259~hmac=52398ea50bfac8b8c477d41c9384261a" id="retweet" height="40" width="40">
-        <img src="https://cdn-icons.flaticon.com/png/512/2989/premium/2989898.png?token=exp=1657801458~hmac=a4024de3b77129e4c46ced4251d10b64" id="random" height="40" width="40">
+        <img src="retweet.png" id="retweet" height="40" width="40">
+        <img src="random.png" id="random" height="40" width="40">
     </div>
     </div>
 </body>
