--- a/j11/task2/index.html
+++ b/j11/task2/index.html
@@ -8,22 +8,21 @@
     <title>Document</title>
 </head>
 <body>
-<div class="start">
-    <button type="button" class="btn" id="btn1">Start!</button>
-</div>
+    <div class="start">
+        <button type="button" class="btn" id="btn1">Start!</button>
+    </div>
 
-<div class="timer__block">
+    <div class="timer__block">
+        <div class="timer"></div>
+    </div>
 
-<div class="timer"></div>
+    <h1 id="text">Click on me!</h1>
 
-</div>
-
-<h1 id="text">Click on me!</h1>
-
-<div class="clicker">
-    <button id="btn-circle"></button>
-    <button id="output"></button>
-</div>
+    <div class="clicker">
+        <h1 class="outText"></h1>
+        <button id="btn-circle"></button>
+        <button id="output"></button>
+    </div>
 
     <script src="script.js"></script>
 </body>
