--- a/j12/index.html
+++ b/j12/index.html
@@ -32,6 +32,7 @@
         <div class="choose__block">
             <div class="choose">
                 <h1 id="text">Choose Your Dino!</h1>
+                <button class="back-to-main">Back To Main Menu</button>
                 <div class="table">
                     <div class="parent">
                         <div class="dino"><img src="icons/Dino-1.png" id="dinoOne" class="dino-1"></div>
