--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -24,7 +24,7 @@
                 <div class="temp" id="temp">34&deg;C</div>
                 <div class="min-max" id="min-max">32&deg;C (min) / 34&deg;C (max)</div>
                 <div class="weather" id="weather"></div>
-                <div class="img"><img src="/images/icons/cloud.png" id="img" width="75" height="75"></div>
+                <div class="img"><img src="./images/icons/cloud.png" id="img" width="75" height="75"></div>
                 <div class="likeAs" id="like-as">Feels like</div>
             
                 <div class="weather-info__block">
