--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="wind">
                         <p>Wind speed:</p>
-                        <img src="/images/icons/wind.png" width="50" height="50">
+                        <img src="/images/wind.png" width="50" height="50">
                         <p id="wind-speed"></p>
                     </div>
                 </div>
