--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -40,12 +40,12 @@
                     </div>
                     <div class="clouds">
                         <p>Cloud percent:</p>
-                        <img src="/images/cloud.png" width="60" height="60">
+                        <img src="./images/cloud.png" width="60" height="60">
                         <p id="clouds-text"></p>
                     </div>
                     <div class="wind">
                         <p>Wind speed:</p>
-                        <img src="/images/wind.png" width="50" height="50">
+                        <img src="./images/wind.png" width="50" height="50">
                         <p id="wind-speed"></p>
                     </div>
                 </div>
